--- a/.github/workflows/build_esp.yml
+++ b/.github/workflows/build_esp.yml
@@ -63,3 +63,39 @@ jobs:
           cmake-build/cmake-build-${{ matrix.board }}/*/*/partition_table/partition-table.bin
           cmake-build/cmake-build-${{ matrix.board }}/*/*/config.env
           cmake-build/cmake-build-${{ matrix.board }}/*/*/flash_args
+
+  # ---------------------------------------
+  # Hardware in the loop (HIL)
+  # Current self-hosted instance is running on an RPI4. For attached hardware checkout hil_pi4.json
+  # ---------------------------------------
+  hil-test:
+    # run only with hathach's commit due to limited resource on RPI4
+    if: github.repository_owner == 'hathach'
+    needs: build-esp
+    runs-on: [self-hosted, esp32s3, hardware-in-the-loop]
+    strategy:
+      fail-fast: false
+      matrix:
+        board:
+          - 'espressif_s3_devkitc'
+
+    steps:
+      - name: Clean workspace
+        run: |
+          echo "Cleaning up previous run"
+          rm -rf "${{ github.workspace }}"
+          mkdir -p "${{ github.workspace }}"
+
+      - name: Checkout test/hil
+        uses: actions/checkout@v3
+        with:
+          sparse-checkout: test/hil
+
+      - name: Download Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ matrix.board }}
+
+      - name: Test on actual hardware
+        run: |
+          python3 test/hil/hil_test.py --board ${{ matrix.board }} hil_pi4.json
