wrap up s3 hil test

--- a/.github/workflows/build_esp.yml
+++ b/.github/workflows/build_esp.yml
@@ -30,10 +30,9 @@ jobs:
       matrix:
         board:
         # ESP32-S2
-#        - 'espressif_kaluga_1'
+        - 'espressif_kaluga_1'
         # ESP32-S3
         - 'espressif_s3_devkitc'
-
     steps:
     - name: Setup Python
       uses: actions/setup-python@v4
@@ -48,9 +47,6 @@ jobs:
 
     - name: Build
       run: docker run --rm -v $PWD:/project -w /project espressif/idf:latest python3 tools/build_esp32.py ${{ matrix.board }}
-
-    - name: test dir
-      run: tree
 
     - name: Upload Artifacts for Hardware Testing
       if: matrix.board == 'espressif_s3_devkitc' && github.repository_owner == 'hathach'
