--- a/.github/workflows/cmake_arm.yml
+++ b/.github/workflows/cmake_arm.yml
@@ -33,25 +33,25 @@ jobs:
       matrix:
         family:
           # Alphabetical order
-#          - 'imxrt'
-#          - 'kinetis_kl'
-#          - 'lpc18 lpc40 lpc43'
-#          - 'lpc54 lpc55'
-#          - 'mcx'
-#          - 'nrf'
-#          - 'ra'
+          - 'imxrt'
+          - 'kinetis_kl'
+          - 'lpc18 lpc40 lpc43'
+          - 'lpc54 lpc55'
+          - 'mcx'
+          - 'nrf'
+          - 'ra'
           - 'rp2040'
-#          - 'samd21'
-#          - 'samd51'
-#          - 'stm32f0'
-#          - 'stm32f1'
-#          - 'stm32f4'
-#          - 'stm32f7'
-#          - 'stm32g0'
-#          - 'stm32g4'
-#          - 'stm32h7'
-#          - 'stm32l4'
-#          - 'stm32u5'
+          - 'samd21'
+          - 'samd51'
+          - 'stm32f0'
+          - 'stm32f1'
+          - 'stm32f4'
+          - 'stm32f7'
+          - 'stm32g0'
+          - 'stm32g4'
+          - 'stm32h7'
+          - 'stm32l4'
+          - 'stm32u5'
     steps:
     - name: Setup Python
       uses: actions/setup-python@v4
