--- a/.github/workflows/build_iar.yml
+++ b/.github/workflows/build_iar.yml
@@ -8,6 +8,7 @@ on:
       - 'examples/**'
       - 'lib/**'
       - 'hw/**'
+      - 'tools/get_deps.py'
       - '.github/workflows/build_iar.yml'
   pull_request:
     branches: [ master ]
@@ -16,6 +17,7 @@ on:
       - 'examples/**'
       - 'lib/**'
       - 'hw/**'
+      - 'tools/get_deps.py'
       - '.github/workflows/build_iar.yml'
 
 concurrency:
@@ -41,7 +43,7 @@ jobs:
           mkdir -p "${{ github.workspace }}"
 
       - name: Checkout TinyUSB
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Get Dependencies
         run: python3 tools/get_deps.py ${{ matrix.family }}
