--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Label New Issue or PR
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.API_TOKEN_GITHUB }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             let label = '';
             let username = '';
