--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -3,7 +3,7 @@ name: Labeler
 on:
   issues:
     types: [opened]
-  pull_request:
+  pull_request_target:
     types: [opened]
 
 jobs:
@@ -25,9 +25,9 @@ jobs:
             if (context.eventName === 'issues') {
               username = context.payload.issue.user.login;
               issueOrPrNumber = context.payload.issue.number;
-            } else if (context.eventName === 'pull_request') {
-              username = context.payload.pull_request.user.login;
-              issueOrPrNumber = context.payload.pull_request.number;
+            } else if (context.eventName === 'pull_request_target') {
+              username = context.payload.pull_request_target.user.login;
+              issueOrPrNumber = context.payload.pull_request_target.number;
             }
 
             // Check if an Adafruit member
