--- a/.github/workflows/build_msp430.yml
+++ b/.github/workflows/build_msp430.yml
@@ -63,8 +63,7 @@ jobs:
     - name: Set Toolchain Path
       run: echo >> $GITHUB_PATH `echo ~/cache/toolchain/*/bin`
 
-    - name: Get Dependencies
-      run: python3 tools/get_deps.py ${{ matrix.family }}
-
     - name: Build
-      run: python3 tools/build_make.py ${{ matrix.family }}
+      run: |
+        python3 tools/get_deps.py ${{ matrix.family }}
+        python tools/build_cmake.py ${{ matrix.family }} -DCMAKE_BUILD_TYPE=MinSizeRel
