--- a/test/unit-test/project.yml
+++ b/test/unit-test/project.yml
@@ -81,20 +81,20 @@
 
 :tools:
   :test_compiler:
-     :executable: clang
-     :name: 'clang compiler'
+     :executable: gcc
+     :name: 'gcc compiler'
      :arguments:
         - -I"$": COLLECTION_PATHS_TEST_TOOLCHAIN_INCLUDE               #expands to -I search paths
         - -I"$": COLLECTION_PATHS_TEST_SUPPORT_SOURCE_INCLUDE_VENDOR   #expands to -I search paths
         - -D$: COLLECTION_DEFINES_TEST_AND_VENDOR  #expands to all -D defined symbols
-        - -fsanitize=address
+        #- -fsanitize=address
         - -c ${1}                       #source code input file (Ruby method call param list sub)
         - -o ${2}                       #object file output (Ruby method call param list sub)
   :test_linker:
-     :executable: clang
-     :name: 'clang linker'
+     :executable: gcc
+     :name: 'gcc linker'
      :arguments:
-        - -fsanitize=address
+        #- -fsanitize=address
         - ${1}               #list of object files to link (Ruby method call param list sub)
         - -o ${2}            #executable file output (Ruby method call param list sub)
 
