--- a/.github/workflows/cmake_arm.yml
+++ b/.github/workflows/cmake_arm.yml
@@ -49,6 +49,8 @@ jobs:
           - 'samd51'
           - 'stm32f0'
           - 'stm32f1'
+          - 'stm32f2'
+          - 'stm32f3'
           - 'stm32f4'
           - 'stm32f7'
           - 'stm32g0'
@@ -135,6 +137,8 @@ jobs:
           - 'samd51'
           - 'stm32f0'
           - 'stm32f1'
+          - 'stm32f2'
+          - 'stm32f3'
           - 'stm32f4'
           - 'stm32f7'
           - 'stm32g0'
