--- a/.github/workflows/build_esp.yml
+++ b/.github/workflows/build_esp.yml
@@ -34,7 +34,7 @@ jobs:
         # ESP32-S2
         - 'espressif_kaluga_1'
         # ESP32-S3
-        - 'espressif_s3_devkitc'
+        - 'espressif_s3_devkitm'
     steps:
     - name: Setup Python
       uses: actions/setup-python@v5
@@ -51,7 +51,7 @@ jobs:
       run: docker run --rm -v $PWD:/project -w /project espressif/idf:v5.1.1 python3 tools/build_esp32.py ${{ matrix.board }}
 
     - name: Upload Artifacts for Hardware Testing
-      if: matrix.board == 'espressif_s3_devkitc' && github.repository_owner == 'hathach'
+      if: matrix.board == 'espressif_s3_devkitm' && github.repository_owner == 'hathach'
       uses: actions/upload-artifact@v4
       with:
         name: ${{ matrix.board }}
@@ -75,7 +75,7 @@ jobs:
       fail-fast: false
       matrix:
         board:
-          - 'espressif_s3_devkitc'
+          - 'espressif_s3_devkitm'
     steps:
       - name: Clean workspace
         run: |
