add cmake to msp432e4

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -42,8 +42,9 @@ jobs:
           - 'kinetis_k kinetis_kl kinetis_k32l2'
           - 'lpc11 lpc13 lpc15'
           - 'lpc17 lpc18 lpc40 lpc43'
-          - 'lpc54 lpc55'
+          - 'lpc51 lpc54 lpc55'
           - 'mcx'
+          - 'msp432e4'
           - 'nrf'
           - 'ra'
           - 'rp2040'
