--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -48,8 +48,7 @@ jobs:
           - 'nrf'
           - 'ra'
           - 'rp2040'
-          - 'samd21'
-          - 'samd51'
+          - 'samd21 saml2x samd51'
           - 'stm32f0'
           - 'stm32f1'
           - 'stm32f2'
@@ -62,6 +61,7 @@ jobs:
           - 'stm32h7'
           - 'stm32l4'
           - 'stm32u5'
+          - 'stm32wb'
     steps:
     - name: Setup Python
       uses: actions/setup-python@v5
