- add cmake to samd11 - build_cmake.py always build with -DCMAKE_BUILD_TYPE=MinSizeRel

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -90,7 +90,7 @@ jobs:
         python3 tools/get_deps.py ${{ matrix.family }}
 
     - name: Build
-      run: python tools/build_cmake.py ${{ matrix.family }} -DCMAKE_BUILD_TYPE=MinSizeRel
+      run: python tools/build_cmake.py ${{ matrix.family }}
       env:
         PICO_SDK_PATH: ${{ github.workspace }}/pico-sdk
 
@@ -191,7 +191,7 @@ jobs:
           python3 tools/get_deps.py ${{ matrix.family }}
 
       - name: Build
-        run: python tools/build_cmake.py ${{ matrix.family }} -DTOOLCHAIN=clang -DCMAKE_BUILD_TYPE=MinSizeRel
+        run: python tools/build_cmake.py ${{ matrix.family }} -DTOOLCHAIN=clang
         env:
           PICO_SDK_PATH: ${{ github.workspace }}/pico-sdk
 
@@ -239,7 +239,7 @@ jobs:
           python3 tools/get_deps.py ${{ matrix.family }}
 
       - name: Build
-        run: python tools/build_cmake.py ${{ matrix.family }} -DCMAKE_BUILD_TYPE=MinSizeRel
+        run: python tools/build_cmake.py ${{ matrix.family }}
 
   # ---------------------------------------
   # Hardware in the loop (HIL)
