--- a/.github/workflows/build_iar.yml
+++ b/.github/workflows/build_iar.yml
@@ -52,7 +52,7 @@ jobs:
         run: python3 tools/get_deps.py ${{ matrix.family }}
 
       - name: Build
-        run: python3 tools/build_cmake.py ${{ matrix.family }} -DTOOLCHAIN=iar -DCMAKE_BUILD_TYPE=MinSizeRel
+        run: python3 tools/build_cmake.py ${{ matrix.family }} -DTOOLCHAIN=iar
 
       - name: Test on actual hardware (hardware in the loop)
         run: |
