--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -48,7 +48,7 @@ jobs:
           - 'nrf'
           - 'ra'
           - 'rp2040'
-          - 'samd11 samd21 saml2x samd51'
+          - 'samd11 samd21 saml2x samd5x_e5x'
           - 'stm32f0'
           - 'stm32f1'
           - 'stm32f2'
@@ -62,6 +62,7 @@ jobs:
           - 'stm32l4'
           - 'stm32u5'
           - 'stm32wb'
+          - 'tm4c'
     steps:
     - name: Setup Python
       uses: actions/setup-python@v5
