add cmake for xmc4000

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -63,6 +63,7 @@ jobs:
           - 'stm32u5'
           - 'stm32wb'
           - 'tm4c'
+          - 'xmc4000'
     steps:
     - name: Setup Python
       uses: actions/setup-python@v5
