--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -47,11 +47,11 @@ jobs:
 
       - name: Generate matrix for ARM GCC
         id: set-matrix-armgcc
-        run: echo "::set-output name=matrix::$(python3 tools/ci.py --toolchain armgcc)"
+        run: echo "::set-output name=matrix::$(python3 tools/ci.py --toolchain arm-gcc)"
 
       - name: Generate matrix for ARM Clang
         id: set-matrix-armclang
-        run: echo "::set-output name=matrix::$(python3 tools/ci.py --toolchain armclang)"
+        run: echo "::set-output name=matrix::$(python3 tools/ci.py --toolchain arm-clang)"
 
   # ---------------------------------------
   # Build ARM with GCC
@@ -123,34 +123,12 @@ jobs:
   # Build ARM with Clang
   # ---------------------------------------
   arm-clang:
+    needs: set-matrix
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        family:
-          # Alphabetical order
-          #- 'mcx' not working with gcc anymore, need to fix this first
-          #- 'ra' port later
-          #- 'rp2040' port later
-          - 'imxrt'
-          - 'kinetis_k kinetis_kl'
-          - 'lpc17 lpc18 lpc40 lpc43'
-          - 'lpc54 lpc55'
-          - 'nrf'
-          - 'samd21'
-          - 'samd5x_e5x'
-          - 'stm32f0'
-          - 'stm32f1'
-          - 'stm32f2'
-          - 'stm32f3'
-          - 'stm32f4'
-          - 'stm32f7'
-          - 'stm32g0'
-          - 'stm32g4'
-          - 'stm32h5'
-          - 'stm32h7'
-          - 'stm32l4'
-          - 'stm32u5'
+        family: ${{ fromJSON(needs.set-matrix.outputs.arm-clang) }}
     steps:
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -161,7 +139,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Checkout pico-sdk for rp2040
-        if: matrix.family == 'rp2040'
+        if: contains(matrix.family, 'rp2040')
         uses: actions/checkout@v4
         with:
           repository: raspberrypi/pico-sdk
