--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -47,11 +47,13 @@ jobs:
 
       - name: Generate matrix for ARM GCC
         id: set-matrix-armgcc
-        run: echo "::set-output name=matrix::$(python3 tools/ci.py --toolchain arm-gcc)"
+        run: |
+          echo "::set-output name=matrix::$(python3 tools/ci.py --toolchain arm-gcc)"
 
       - name: Generate matrix for ARM Clang
         id: set-matrix-armclang
-        run: echo "::set-output name=matrix::$(python3 tools/ci.py --toolchain arm-clang)"
+        run: |
+          echo "::set-output name=matrix::$(python3 tools/ci.py --toolchain arm-clang)"
 
   # ---------------------------------------
   # Build ARM with GCC
@@ -128,7 +130,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        family: ${{ fromJSON(needs.set-matrix.outputs.arm-clang) }}
+        family: ${{ fromJSON(needs.set-matrix.outputs.arm-clang).family }}
     steps:
       - name: Setup Python
         uses: actions/setup-python@v5
