--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -48,15 +48,14 @@ jobs:
       - name: Generate matrix for ARM GCC
         id: set-matrix-armgcc
         run: |
-          echo 'matrix={"family": ["stm32f0"]}' >> $GITHUB_OUTPUT
-          #echo "::set-output name=matrix::$(python3 tools/ci.py --toolchain arm-gcc)"
-
+          MATRIX_JSON=$(python tools/ci.py --toolchain arm-gcc)
+          echo "matrix::$MATRIX_JSON"" >> $GITHUB_OUTPUT
 
       - name: Generate matrix for ARM Clang
         id: set-matrix-armclang
         run: |
-          #echo '::set-output name=matrix::{"family": ["stm32f1", "stm32f0"]}'
-          echo `matrix::$(python tools/ci.py --toolchain arm-clang)` >> $GITHUB_OUTPUT
+          #echo `matrix::$(python tools/ci.py --toolchain arm-clang)` >> $GITHUB_OUTPUT
+          echo 'matrix={"family": ["stm32f0"]}' >> $GITHUB_OUTPUT
 
   # ---------------------------------------
   # Build ARM with GCC
