--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -49,6 +49,8 @@ jobs:
         id: set-matrix-armgcc
         run: |
           MATRIX_JSON=$(python tools/ci.py --toolchain arm-gcc)
+          echo $MATRIX_JSON
+          echo "matrix::$(python tools/ci.py --toolchain arm-gcc)"
           echo "matrix::$MATRIX_JSON" >> $GITHUB_OUTPUT
 
       - name: Generate matrix for ARM Clang
