--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           MATRIX_JSON=$(python tools/ci.py --toolchain arm-gcc)
           echo $MATRIX_JSON
-          echo 'matrix=$MATRIX_JSON' >> $GITHUB_OUTPUT
+          echo "matrix=$MATRIX_JSON" >> $GITHUB_OUTPUT
 
       - name: Generate matrix for ARM Clang
         id: set-matrix-armclang
